--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@
     position: absolute;
     display: none;
 }
+h1 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+p {
+    text-align: center;
+}
